--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ img{
     font-size: 160px;
     font-weight: bold;
     line-height: 1;
-    text-shadow: 0 4px 6px rgb(0 0 0 / 25%)
+    text-shadow: 0 4px 6px rgb(0 0 0 / 25%);
     margin-bottom: 10px;
 }
 
@@ -364,7 +364,278 @@ img{
 
 @media screen and (max-width: 767px){
 
+    body{
+        font-size: 15px;
+    }
+
+    .container{
+        padding: 0 20px;
+    }
+
+    .content{
+        padding: 40px 0 60px;
+        row-gap: 50px;
+    }
+
+    .heading-primary{
+        font-size: 32px;
+    }
+
+    .table-type01{
+        font-size: 14px;
+        line-height: 1.5;
+    }
+        
+    .table-type01 th,
+    .table-type01 td{
+        padding: 20px 0;
+    }
     
+    .table-type01 th {
+        width: 100px;
+    }
+
+    .header{
+        position: relative;
+        height: 60px;
+        padding: 20px;
+    }
+    
+    .header-logo{
+        width: 107px;
+    }
+
+    .gnav{
+        display: none;
+        position: fixed;
+        top: 0;
+        right: 0;
+        z-index: -10;
+        width: 180px;
+        height: 100%;
+        background-color: var(--main-color);
+        box-shadow: 10px 0 35px -20px rgb(0 0 0 / 25%);
+    }
+
+    .gnav__list{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 180px;
+        padding: 90px 20px 20px 50px;
+    }
+
+    .gnav__link{
+        color: #fff;
+    }
+
+    .gnav__link:hover{
+        color: #fff;
+    }
+
+    .gnav__link--active{
+        opacity: 0.6;
+    }
+
+    .btn-menu{
+        display: flex;
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 100;
+        align-items: center;
+        justify-content: center;
+        width: 60px;
+        height: 60px;
+        text-align: center;
+        padding: 21px 16px;
+        border: none;
+        outline: none;
+        background: none;
+        background-color: var(--main-color);
+        cursor: pointer;
+        appearance: none;
+    }
+
+    .btn-menu__line{
+        display: block;
+        position: relative;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        transition: all 0.4s;
+        border-radius: 4px;
+        color: #FFF;
+    }
+
+    .btn-menu__line::before,
+    .btn-menu__line::after{
+        display: block;
+        content:"";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        transition: inherit;
+        border-radius: 4px;
+        background-color: #FFF;
+    }
+
+    .btn-menu__line::before{
+        transform: translateY(-8px);
+    }
+
+    .btn-menu__line::after{
+        transform: translateY(8px);
+    }
+
+    .btn-menu.avtive .btn-menu__line{
+        background-color: transparent;
+    }
+
+    .btn-menu.active .btn-menu__line::before,
+    .btn-menu.active .btn-menu__line::after{
+        top: 0;
+        background-color: #FFF;
+    }
+
+    .btn-menu.active .btn-menu__line::before {
+        transform: rotate(45deg);
+      }
+    
+      .btn-menu.active .btn-menu__line::after {
+        transform: rotate(-45deg);
+      }
+
+      .mv {
+        height: 460px;
+        background: url(img/sp_mv.jpg);
+      }
+
+      .mv__title{
+        font-size: 80px;
+      }
+
+      .mv__subtitle{
+        font-size: 20px;
+      }
+
+      .news__heading{
+        margin-bottom: 20px;
+      }
+
+      .news__inner{
+        display: block;
+      }
+
+      .news-list__link{
+        flex-direction: column;
+      }
+
+      .news-list__item{
+        font-size: 15px;
+        line-height: 1.8;
+      }
+
+      .news-list__item:last-child{
+        margin-bottom: 0;
+      }
+
+      .news-list__title{
+        line-height: 1.6;
+      }
+
+      .news-list__date{
+        margin-right: 0;
+      }
+
+      .service__heading{
+        margin-bottom: 20px;
+      }
+
+      .service__heading::before{
+        top: -2px;
+        right: -30px;
+        font-size: 70px;
+      }
+
+      .service-list{
+        row-gap: 20px;
+        grid-template-columns: 1fr;
+      }
+
+      .servce-list__item{
+        padding: 40px 30px;
+      }
+
+      .service-list__img-wrapper{
+        margin-bottom: 5px;
+      }
+
+      .service-list__img {
+        font-size: 60px;
+      }
+
+      .service-list__title{
+        font-size: 16px;
+      }
+
+      .service-list__text{
+        margin-top: 10px;
+      }
+
+      .footer{
+        padding: 40px 0 30px;
+      }
+
+      .footer-nav__list{
+        column-gap: 25px;
+      }
+
+      .footer-nav__item{
+        font-size: 12px;
+      }
+
+      .footer__copyright{
+        font-size: 10px;
+      }
+
+      .page-header{
+        background-image: url(img/sp_header.jpg);
+        height: 160px;
+      }
+
+      .page-header__title{
+        font-size: 28px;
+      }
+
+      .message__title {
+        font-size: 24px;
+        margin-bottom: 15px;
+      }
+    
+      .message__subtitle {
+        font-size: 15px;
+        margin-bottom: 30px;
+      }
+    
+      .ceo-message__img-wrapper {
+        margin: 0 15px 10px 0;
+      }
+    
+      .office-img {
+        height: 260px;
+        object-fit: cover;
+      }
+
+      .company-info__accsess iframe{
+        height: 300px;
+      }
+
+      .company-info__map-accsess{
+        font-size: 12px;
+        margin-top: 15px;
+      }
+
 }
 
 
