--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ img{
     padding: 30px 70px;
 }
 
-.header-logo{
+.header__logo{
     line-height: 1;
 }
 
@@ -267,7 +267,7 @@ img{
     color:var(--text-color);
     color:#fff;
     text-decoration: none;
-} 
+}
 
 .footer-copyright{
     font-size: 12px;
@@ -300,21 +300,21 @@ img{
 }
 
 .message__title{
-    text-align: center;
     font-size: 40px;
     font-weight: bold;
     line-height: 1.5;
     letter-spacing: 0.05em;
     color: var(--main-color);
     margin-bottom: 25px;
+    text-align: center;
 }
 
 .message__subtitle{
-    text-align: center;
     font-size: 18px;
-    line-height: 1;
+    line-height: 1.6;
     letter-spacing: 0.05em;
     margin-bottom: 40px;
+    text-align: center;
 }
 
 .ceo-message__img-wrapper{
@@ -336,9 +336,6 @@ img{
     color: var(--link-color);
 }
 
-.office{
-    height: 400px;
-}
 
 .page-header__text{
     font-size: 40px;
@@ -410,11 +407,11 @@ img{
         position: fixed;
         top: 0;
         right: 0;
-        z-index: -10;
+        z-index: 10;
         width: 180px;
         height: 100%;
         background-color: var(--main-color);
-        box-shadow: 10px 0 35px -20px rgb(0 0 0 / 25%);
+        box-shadow: -10px 0 35px -20px rgb(0 0 0 / 25%);
     }
 
     .gnav__list{
@@ -423,6 +420,7 @@ img{
         align-items: flex-start;
         width: 180px;
         padding: 90px 20px 20px 50px;
+        row-gap: 25px;
     }
 
     .gnav__link{
@@ -500,141 +498,141 @@ img{
 
     .btn-menu.active .btn-menu__line::before {
         transform: rotate(45deg);
-      }
+    }
     
-      .btn-menu.active .btn-menu__line::after {
+    .btn-menu.active .btn-menu__line::after {
         transform: rotate(-45deg);
-      }
+    }
 
-      .mv {
+    .mv {
         height: 460px;
         background: url(img/sp_mv.jpg);
-      }
+    }
 
-      .mv__title{
+    .mv__title{
         font-size: 80px;
-      }
+    }
 
-      .mv__subtitle{
+    .mv__subtitle{
         font-size: 20px;
-      }
+    }
 
-      .news__heading{
+    .news__heading{
         margin-bottom: 20px;
-      }
+    }
 
-      .news__inner{
+    .news__inner{
         display: block;
-      }
+    }
 
-      .news-list__link{
+    .news-list__link{
         flex-direction: column;
-      }
+    }
 
-      .news-list__item{
+    .news-list__item{
         font-size: 15px;
         line-height: 1.8;
-      }
+    }
 
-      .news-list__item:last-child{
+    .news-list__item:last-child{
         margin-bottom: 0;
-      }
+    }
 
-      .news-list__title{
+    .news-list__title{
         line-height: 1.6;
-      }
+    }
 
-      .news-list__date{
+    .news-list__date{
         margin-right: 0;
-      }
+    }
 
-      .service__heading{
+    .service__heading{
         margin-bottom: 20px;
-      }
+    }
 
-      .service__heading::before{
+    .service__heading::before{
         top: -2px;
         right: -30px;
         font-size: 70px;
-      }
+    }
 
-      .service-list{
+    .service-list{
         row-gap: 20px;
         grid-template-columns: 1fr;
-      }
+    }
 
-      .servce-list__item{
+    .servce-list__item{
         padding: 40px 30px;
-      }
+    }
 
-      .service-list__img-wrapper{
+    .service-list__img-wrapper{
         margin-bottom: 5px;
-      }
+    }
 
-      .service-list__img {
+    .service-list__img {
         font-size: 60px;
-      }
+    }
 
-      .service-list__title{
+    .service-list__title{
         font-size: 16px;
-      }
+    }
 
-      .service-list__text{
+    .service-list__text{
         margin-top: 10px;
-      }
+    }
 
-      .footer{
+    .footer{
         padding: 40px 0 30px;
-      }
+    }
 
-      .footer-nav__list{
+    .footer-nav__list{
         column-gap: 25px;
-      }
+    }
 
-      .footer-nav__item{
+    .footer-nav__item{
         font-size: 12px;
-      }
+    }
 
-      .footer__copyright{
+    .footer__copyright{
         font-size: 10px;
-      }
+    }
 
-      .page-header{
+    .page-header{
         background-image: url(img/sp_header.jpg);
         height: 160px;
-      }
+    }
 
-      .page-header__title{
+    .page-header__title{
         font-size: 28px;
-      }
+    }
 
-      .message__title {
+    .message__title {
         font-size: 24px;
         margin-bottom: 15px;
-      }
+    }
     
-      .message__subtitle {
+    .message__subtitle {
         font-size: 15px;
         margin-bottom: 30px;
-      }
+    }
     
-      .ceo-message__img-wrapper {
+    .ceo-message__img-wrapper {
         margin: 0 15px 10px 0;
-      }
+    }
     
-      .office-img {
+    .office-img {
         height: 260px;
         object-fit: cover;
-      }
+    }
 
-      .company-info__accsess iframe{
+    .company-info__accsess iframe{
         height: 300px;
-      }
+    }
 
-      .company-info__map-accsess{
+    .company-info__map-accsess{
         font-size: 12px;
         margin-top: 15px;
-      }
+    }
 
 }
 
